tests/paczka1/fuzzy1/43740569.err
Error in line 2: rgq A317 42,1
Error in line 8: rgq S169 16,9
Error in line 11: 9qCm8rpEaWU A317 54,4
Error in line 29: 9qCm8rpEaWU S169 47,3
Error in line 37: iNoVOuMc S1?9 5?,8
